Fix compilation when run on Java 17
Failures are like "The constructor Float(float) has been deprecated and
marked for removal"

Change-Id: Ic7ac882afbfddc5a360624adf0890956d6391818